--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
 /* Estilos generales */
 :root {
-    --primary-color: #2c3e50;
-    --secondary-color: #3498db;
+    --primary-color: #050708;
+    --secondary-color: #5344d8;
     --accent-color: #e74c3c;
-    --light-color: #ecf0f1;
-    --dark-color: #2c3e50;
+    --light-color: #c5deff;
+    --dark-color: #0f151b;
     --text-color: #333;
     --text-light: #7f8c8d;
 }
@@ -19,17 +19,17 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.6;
     color: var(--text-color);
-    background-color: #f9f9f9;
+    background-color: #f0f0f0;
 }
 
 header {
     background-color: var(--primary-color);
-    color: white;
+    color: rgb(237, 235, 252);
     padding: 1rem 0;
     position: sticky;
     top: 0;
     z-index: 100;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 10px rgba(24, 0, 92, 0.1);
 }
 
 .header-content {
